--- a/style.css
+++ b/style.css
@@ -1,52 +1,29 @@
-/* Popup container */
-.popup {
-    position: fixed; /* or absolute */
-    top: 70%;
-    left: 50%;
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
 }
 
-/* The actual popup (appears on top) */
-.popup .form {
-  visibility: hidden;
-  width: 500px;
-  background-color: #555;
-  color: #fff;
-  text-align: center;
-  border-radius: 6px;
-  padding: 8px 0;
-  position: absolute;
-  z-index: 1;
-  bottom: 125%;
-  left: 50%;
-  margin-left: -80px;
+html, body, .wrapper {
+  height: 100%;
+  margin: 0;
+  padding: 0;
 }
 
-/* Popup arrow */
-.popup .form::after {
-  content: "";
-  position: absolute;
-  top: 100%;
-  left: 50%;
-  margin-left: -5px;
-  border-width: 5px;
-  border-style: solid;
-  border-color: #555 transparent transparent transparent;
+body {
+  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+  background-color: darkred;
 }
 
-/* Toggle this class when clicking on the popup container (hide and show the popup) */
-.popup .show {
-  visibility: visible;
-  -webkit-animation: fadeIn 1s;
-  animation: fadeIn 1s
+.wrapper {
+  padding-top: 30px;
+  padding-left: 20px;
+  padding-right: 20px;
 }
 
-/* Add animation (fade in the popup) */
-@-webkit-keyframes fadeIn {
-  from {opacity: 0;}
-  to {opacity: 1;}
-}
-
-@keyframes fadeIn {
-  from {opacity: 0;}
-  to {opacity:1 ;}
+header {
+  text-align: left;
+  padding: 20px;
+  padding-top: 10 px;
+  color: whitesmoke;
 }
