--- a/style.css
+++ b/style.css
@@ -59,6 +59,11 @@ header {
   color: black;
   display: block;
   text-align: center;
+  border-radius: 10px 10px 0px 0px;
+}
+
+h2 {
+  padding-top: 5px;
 }
 
 .card-footer {
@@ -75,14 +80,12 @@ header {
   text-align: center;
   margin: 15px 15px 15px 20px;
   padding: 14px 34px;
+  border-radius: 10px;
 }
 
 #password {
-  -webkit-appearance: none;
-  -moz-appearance: none;
-  appearance: none;
   display: block;
-  width: 50%;
+  width: 100%;
   padding-left: 15px;
   padding-right: 15px;
   padding-top: 15px;
@@ -90,4 +93,5 @@ header {
   background-color: black;
   color: whitesmoke;
   text-align: center;
+  object-position: center;
 }
