--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,8 +24,8 @@ body {
 header {
   text-align: center;
   font-size: 40px;
-  padding: 20px;
-  padding-top: 10 px;
+  padding-top: 25px;
+  padding-bottom: 25px;
   color: whitesmoke;
 }
 
@@ -39,20 +39,9 @@ header {
   max-width: 800px;
   margin: 0 auto;
 }
-
-.card {
-  background-color: black;
-  color: whitesmoke;
-  border-radius: 10px;
-  border-width: 5px;
-  font-size: 20px;
-  padding: 30px, 40px;
-  max-width: 800px;
-  margin: 0 auto;
-}
-
 
 .card-header {
+  font-size: 30px;
   height: 50px;
   max-width: 800px;
   background: whitesmoke;
@@ -62,10 +51,6 @@ header {
   border-radius: 10px 10px 0px 0px;
 }
 
-h2 {
-  padding-top: 5px;
-}
-
 .card-footer {
   text-align: center;
 }
@@ -73,7 +58,10 @@ h2 {
 .btn {
   border: none;
   display: inline-block;
-  font-size: 25px;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: 200;
+  font-style: italic;
+  font-size: 30px;
   background-color: darkred;
   color: whitesmoke;
   line-height: 25px;
@@ -84,11 +72,15 @@ h2 {
 }
 
 #password {
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: 200;
+  font-style: italic;
+  font-size: 30px;
   display: block;
   width: 100%;
   padding-left: 15px;
   padding-right: 15px;
-  padding-top: 15px;
+  padding-top: 45px;
   padding-bottom: 15px;
   background-color: black;
   color: whitesmoke;
